--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.vision.all import *\n",
+    "from fastbook import *\n",
     "from fastai.vision.widgets import *"
    ]
   },
