--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "from fastbook import *\n",
-    "from fastai.vision.widgets import *"
+    "from fastai.vision import *"
    ]
   },
   {
