--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -21,6 +21,8 @@
    "outputs": [],
    "source": [
     "from fastai.vision.all import *"
+    "import fastbook"
+    "from fastbook import *"
    ]
   },
   {
