--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.vision.all import *"
-    "import fastbook"
+    "from fastai.vision.widgets import *\n"
+    "import fastbook\n"
     "from fastbook import *"
    ]
   },
