--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of your friend talked about a piece of clothing that you do not know ! No problem, just take a photo and upload it on the app and it will classify it.(Important: this only handles socks,shoes,shirts,t-shirts,polo-shirts and jeans. It will not give a sensible answer for others piece of clothing like jackets.)"
+    "One of your friend talked about a piece of clothing that you do not know ! No problem, just take a photo and upload it on the app and it will classify it.(Important: this only handles socks,shoes,shirts,t-shirts,polo-shirts and jeans. It will not give a sensible answer for other pieces of clothing like jackets.)"
    ]
   },
   {
